--- a/client/.github/workflows/deploy.yml
+++ b/client/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
-name: Deploy React to GitHub Pages
+name: Deploy Client to GitHub Pages
 
 on:
   push:
-    branches: ["main"] # Runs whenever you push to main
+    branches: ["main"]
     paths:
-      - 'client/**' # Only runs if you change frontend code
+      - 'client/**' # Only trigger if changes happen in the client folder
 
 permissions:
   contents: write
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./client # Important: We are in the 'client' folder
+        working-directory: ./client
 
     steps:
       - name: Checkout Code
@@ -33,12 +33,12 @@ jobs:
       - name: Build Project
         run: npm run build
 
-      # AUTOMATICALLY FIX THE 404 ROUTING ISSUE
-      - name: Copy index.html to 404.html
+      # Magic step: Fixes the 404 routing issue automatically
+      - name: Create 404.html
         run: cp dist/index.html dist/404.html
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: client/dist # The folder the build script created
-          branch: gh-pages # The branch the action should deploy to
+          folder: client/dist
+          branch: gh-pages
