--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://alakh.github.io/finance-tracker",
-  "predeploy": "npm run build && cp dist/index.html dist/404.html",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview  --host 0.0.0.0 --port $PORT",
-    "predeploy": "npm run build && cp dist/index.html dist/404.html",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview  --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "@react-oauth/google": "^0.13.4",
