--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
     branches: ["main"]
     paths:
       - 'client/**' # Only trigger if changes happen in the client folder
+  workflow_dispatch:
 
 permissions:
   contents: write
